update: shading language remaining content

--- a/docs/zh/guide/shading-language/draw-basic-graphics.mdx
+++ b/docs/zh/guide/shading-language/draw-basic-graphics.mdx
@@ -109,7 +109,7 @@ fn circle_sdf(pos: vec2, center: vec2, radius: float) -> float {
 
 把距离场想象成一堆不太透明的圆是很有用的。这个距离场中，表示纯白色的区域(也就是数值为1的部分)就在对象上。纯黑色部分，就是距离物体最远的点。中间的灰色部分，数值在0-1之间。这是一种可视化0到1之间距离的方法。
 
-图片
+![距离场](https://trusted-heron-8b2.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fee83deb1-85d6-437c-894c-b4353fce458b%2Fb654cd01-0266-4898-b679-e27e8e801332%2FPasted_image_20241201074137.png?table=block&id=15369449-ef79-80d5-847b-eacab00cc02e&spaceId=ee83deb1-85d6-437c-894c-b4353fce458b&width=900&userId=&cache=v2)
 
 **有号距离场 (Signed Distance Field, SDF)** 是一个三维标量场，其中每个点的值表示从该点到最近表面的距离。这些距离值具有“有号”的特性：
 
@@ -127,3 +127,71 @@ fn circle_sdf(pos: vec2, center: vec2, radius: float) -> float {
 - **距离场 (Distance Field)**：一个场，其中每个点的值表示到物体表面的最短距离。一个距离场可以是有号（Signed）或无号（Unsigned）的。
 - **三线性插值 (Trilinear Interpolation)**：用于在3D空间中的一个体素网格上估计任意点的SDF值的方法。三线性插值通过对体素点的邻近值进行线性插值来计算。
 
+## SDF 视口介绍 (Sdf2d::viewport)
+
+```rust
+let sdf = Sdf2d::viewport(self.pos * self.rect_size);
+```
+
+1. `self.pos`：这是着色器中的当前像素坐标，范围通常在 0.0 到 1.0 之间。它代表了我们正在处理的像素在整个绘制区域中的相对位置。
+2. `self.rect_size`：这是我们要绘制的矩形区域的实际尺寸（以像素为单位）。
+3. `self.pos * self.rect_size`：这个乘法操作将归一化的坐标转换为实际的像素坐标。
+
+想象我们正在绘制一个按钮，尺寸是 `200x100` 像素。整个转换过程可以分为三个关键阶段：
+
+### 1. 初始坐标系 (self.pos)
+
+```plaintext
+┌─────────────────┐
+│(0,0)            │
+│                 │
+│      (0.5,0.5)  │
+│                 │
+│         (1,1)   │
+└─────────────────┘
+归一化坐标：范围是 0.0 到 1.0
+```
+
+### 2. 乘以尺寸 (self.pos * self.rect_size)
+
+```plaintext
+┌─────────────────────┐
+│(0,0)                │
+│                     │
+│      (100,50)       │
+│                     │
+│           (200,100) │
+└─────────────────────┘
+像素坐标：现在坐标表示实际像素位置
+rect_size = (200,100)
+```
+
+### 3. SDF视口 (Sdf2d::viewport)
+
+```plaintext
+┌─────────────────────┐ ↑
+│(-100,-50)           │ │
+│                     │ 100px
+│      (0,0)          │ │
+│                     │ │
+│         (100,50)    │ ↓
+└─────────────────────┘
+←——— 200px ———→
+中心化坐标：原点在中心
+```
+
+为了更好地理解这个转换过程，我们可以看一些具体的坐标点是如何转换的：
+
+```plaintext
+位置        归一化坐标     像素坐标         SDF坐标
+左上角      (0.0, 0.0)    (0, 0)         (-100, -50)
+中心        (0.5, 0.5)    (100, 50)      (0, 0)
+右下角      (1.0, 1.0)    (200, 100)     (100, 50)
+```
+
+这种坐标转换的好处是：
+
+1. **精确定位**：可以精确控制每个像素的渲染
+2. **缩放无关**：可以轻松处理不同尺寸的UI元素
+3. **中心化操作**：让很多图形操作（如旋转）变得更简单
+4. **抗锯齿**：让边缘渲染更平滑
